# rust-crypto

./: Cargo.toml  readme.md
src/: main.rs
static/: coins.json
