[package]
name = "rust-crypto"
version = "0.1.0"
authors = ["Rik Nijdeken <git@nijdeken.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"